Take gitignore from github repo standard

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,36 @@
+bwa.*
+trim.*
+finished.indexing.ref
+*~
+*.fa
+*.fas
+Trinity.fasta
+*.finished
+*.fq
+*.fq.gz
+*.fasta
+*.amb
+*.ann
+*.bwt
+*.fai
+*.pac
+*.sa
+*.fasta.gz
+*.fastq.gz
+*.fastq.gz.bam
+*.fastq.gz.bam.bai
+*.fastq.gz.unsorted.bam
+*.fastq.gz.sam
+*.bam
+*.bam.bai
+z-*
+*fastq*
+*vcf*
+*.gff3
+*.test
+*.dict
 *.fastq.gz
 *.fastq
 *~
-
+.Rproj.user
+02_raw_data/*.txt
